--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Gluten:wght@700&family=Lato&family=Poppins:wght@200;400&family=Roboto:ital,wght@0,400;0,700;1,100&display=swap');
+
+:root {
+  --font-texto: 'Poppins', sans-serif;
+}
+@font-face {
+  font-family: 'cordel';
+  src: url('font/cordelina.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
 
 *{
   margin: 0;
@@ -18,12 +29,21 @@ header {
 }
 
 header h1 {
+  font-family: cordel;
+  font-size: 90px;
   padding-top: 50px;
   font-variant: small-caps;
 }
 
 header p {
+  font-family: var(--font-texto);
+  font-weight:200;
+  font-size: 19px;
   padding-bottom: 50px;
+}
+
+header p a{
+  font-style: italic;
 }
 header p a, footer a {
   color: white;
@@ -43,18 +63,46 @@ section {
 
 .normal {
   background-color: white;
+  background-image: url(imagens/origami-de-cisne.png);
+  background-repeat: no-repeat;
+  background-attachment: local;
+  background-position: right center;
   color: black;
+}
+.normal p {
+  font-family: var(--font-texto);
+  font-weight: 200;
+  font-size: 25px;
+  line-height: 1.5cm;
 }
 
 .imagem p {
+  
+  font-family: var(--font-texto);
+  font-weight: 200;
+  font-size: 25px;
+  line-height: 1.5cm;
+  border-radius: 10px;
   padding: 10px;
   background-color: rgba(0, 0, 0, 0.63);
-  width: 350px;
+  width: 500px;
+
 }
 .imagem {
   background-color: rgba(0, 0, 0, 0.445);
   color: white;
-  
+  background-image: url(imagens/background001.jpg); 
+  background-size:  cover;
+  background-position: center center;
+  background-attachment: fixed;
+  box-shadow: inset 0px 6px 15px rgba(0, 0, 0, 0.589) ;
+}
+
+#cartas {
+  background-image: url(imagens/background002.jpg);
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
 }
 
 
