--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@
 }
 
 *{
-  margin: 0;
-  padding: 0;
+  margin: 0 auto;
+  padding: 0 auto;
   box-sizing: border-box;
 }
 
@@ -59,14 +59,17 @@ section {
   padding-bottom: 10vh;
   line-height: 2em;
   padding-left: 30px;
+  text-align: center;
 }
 
-.normal {
+.normal { 
   background-color: white;
   background-repeat: no-repeat;
   color: black;
 }
 .normal p {
+  margin: auto;
+  max-width: 500px;
   font-family: var(--font-texto);
   font-weight: 200;
   font-size: 25px;
@@ -74,7 +77,8 @@ section {
 }
 
 .imagem p {
-  
+  margin: auto;
+  max-width: 365px;
   font-family: var(--font-texto);
   font-weight: 200;
   font-size: 25px;
@@ -82,8 +86,6 @@ section {
   border-radius: 50px 10px 50px 10px ;
   padding: 15px;
   background-color: rgba(0, 0, 0, 0.774);
-  width: 500px;
-
 }
 .imagem {
   background-color: rgb(0, 0, 0);
