--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
-@charset "utf-8";
+@charset "UTF-8";
+
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Gluten:wght@700&family=Lato&family=Poppins:wght@200;400&family=Roboto:ital,wght@0,400;0,700;1,100&display=swap');
 
-:root {
-  --font-texto: 'Poppins', sans-serif;
-}
 @font-face {
   font-family: 'cordel';
   src: url('font/cordelina.otf') format('opentype');
@@ -11,15 +9,18 @@
   font-style: normal;
 }
 
-*{
-  margin: 0 auto;
-  padding: 0 auto;
-  box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-html, body{
+:root {
+  --font-texto: 'Poppins', sans-serif;
+}
+
+html, body {
+  background-color: rgba(0, 0, 0, 0.527);
   min-height: 100vh;
-  background-color: darkgray;
 }
 
 header {
@@ -27,92 +28,92 @@ header {
   color: white;
   text-align: center;
 }
-
 header h1 {
   font-family: cordel;
   font-size: 90px;
   padding-top: 50px;
+  padding-bottom: 5px;
   font-variant: small-caps;
 }
-
 header p {
-  font-family: var(--font-texto);
   font-weight:200;
   font-size: 19px;
   padding-bottom: 50px;
 }
-
 header p a{
-  font-style: italic;
-}
-header p a, footer a {
   color: white;
+  font-family: var(--font-texto);
   text-decoration: none;
   font-weight: bold;
 }
-header p a:hover, footer p a:hover {
-  text-decoration: underline;
+header p a:hover {
+  text-decoration: underline ;
+  color: bisque;
 }
-
 section {
   padding-top: 10vh;
   padding-bottom: 10vh;
-  line-height: 2em;
-  padding-left: 30px;
-  text-align: center;
+  padding-left: auto;
 }
-
-.normal { 
+.normal {
   background-color: white;
   background-repeat: no-repeat;
-  color: black;
 }
-.normal p {
+.normal p{
   margin: auto;
-  max-width: 500px;
+  max-width: 400px;
   font-family: var(--font-texto);
-  font-weight: 200;
+  padding: 20px;
   font-size: 25px;
-  line-height: 1.5cm;
+  line-height: 2em;
 }
-
 .imagem p {
-  margin: auto;
-  max-width: 365px;
   font-family: var(--font-texto);
-  font-weight: 200;
   font-size: 25px;
-  line-height: 1.5cm;
-  border-radius: 50px 10px 50px 10px ;
-  padding: 15px;
-  background-color: rgba(0, 0, 0, 0.774);
+  line-height: 2em;
+  margin: auto;
+  padding: 20px;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.521);
+  max-width: 400px;
+  height: auto;
+  border-radius: 10px;
+ 
+}
+@media screen and (max-width: 550px) {
+  .imagem p, .normal p{
+    font-size: 16px;
+    max-width: 300px;
+    height: auto;
+  }
+  footer p a, .rodape {
+    font-size: 16px;
+  }
+
 }
 .imagem {
-  background-color: rgb(0, 0, 0);
-  color: white;
-  background-image: url(imagens/background001.jpg); 
-  background-size:  cover;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-image: url(imagens/background001.jpg);
   background-position: center center;
-  background-attachment: fixed;
-  box-shadow: inset 0px 3px 5px rgba(0, 0, 0, 0.507);
-}
-
-#cartas {
-  background-image: url(imagens/background002.jpg);
   background-size: cover;
-  background-position: center center;
   background-attachment: fixed;
 }
-
-
-
-
-
-
+#carta {
+  background-image: url(imagens/background002.jpg);
+}
 
 footer {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
   background-color: black;
-  text-align: center;
   color: white;
-  padding: 15px;
+  font-family: var(--font-texto);
+}
+
+footer p {
+  font-size: 20px;
+  padding: 50px 0;
+  text-align: center;
 }
